<resources>
    <string name="app_name">Digital Dairy App</string>
    <string name="title_activity_admin">admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_user">user</string>
    <string name="daily_entry">Daily Entry</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="trace_users">Trace Users</string>
    <string name="add_admin">Add Admin</string>
    <string name="add_user">Add User</string>
    <string name="digital_dairy_app">Digital Dairy App</string>
    <string name="user_a">user_a</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="track_details">Track Details</string>
    <string name="user_logout">Logout</string>
    <string name="user_home">Home</string>
    <string name="admin_home">Home</string>
    <string name="digtal_dairy_app">Digtal Dairy App</string>
    <string name="gecm_dept_of_cse">GECM (Dept of CSE)</string>
    <string name="gecm_departmant_of_cse">GECM (Departmant of CSE)</string>
    <string name="admin_login">Admin Login</string>
    <string name="login">Login</string>
</resources>