<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/user_home" />
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/baseline_account"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_trace_ur_details"
            android:icon="@drawable/baseline_library_books_24"
            android:title="@string/track_details" />
    </group>
    <group>
        <item
            android:id="@+id/nav_user_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/user_logout" />
    </group>
</menu>